--- a/Calcular/app/src/main/res/layout/activity_main.xml
+++ b/Calcular/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,8 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvOpcao" />
+        app:layout_constraintTop_toBottomOf="@+id/tvOpcao"
+        />
 
     <TextView
         android:id="@+id/tvOperacao"
@@ -108,6 +109,7 @@
         app:layout_constraintEnd_toEndOf="@+id/edtNumero2"
         app:layout_constraintStart_toStartOf="@+id/edtNumero2"
         app:layout_constraintTop_toBottomOf="@+id/edtNumero2" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
