--- a/Calcular/app/src/main/res/layout/activity_main.xml
+++ b/Calcular/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,18 @@
         android:text="Calcular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgIgual" />>
+        app:layout_constraintTop_toBottomOf="@+id/imgIgual" />
+
+    <ImageView
+        android:id="@+id/imgLimpar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvResultado"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintStart_toEndOf="@+id/btnCalcular"
+        app:srcCompat="@drawable/limpar" />>
 
 
 
