--- a/Calcular/app/src/main/res/layout/activity_main.xml
+++ b/Calcular/app/src/main/res/layout/activity_main.xml
@@ -85,8 +85,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
+        android:textStyle="bold"
+        android:textSize="18dp"
+        android:textAlignment="center"
         android:hint="Resultado da operação matemática"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,10 +109,9 @@
         android:id="@+id/imgLimpar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="56dp"
         app:layout_constraintBottom_toBottomOf="@+id/tvResultado"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toEndOf="@+id/btnCalcular"
         app:srcCompat="@drawable/limpar" />>
 
